--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="css/master.css" media="screen" title="no title">
     <meta charset="utf-8">
-    <title></title>
+    <title>Title</title>
   </head>
   <body>
-
+    <div class="nav">
+      <h1>NAV BAR</h1>
+    </div>
+    <div class="body">
+      <p>
+        This is the body.
+      </p>
+    </div>
+    <div class="footer">
+      <h3>footer</h3>
+    </div>
   </body>
 </html>
